<resources>
    <string name="app_name">AppExemploAula4aN2022_2</string>
    <string name="txtDesenho">Desenho</string>
    <string name="txtSensores">Sensores</string>
    <string name="txtTesteBD">Teste BD</string>
    <string name="txtRe">RE</string>
    <string name="txtNome">Nome</string>
    <string name="txtDataAdmissao">Data Admissão</string>
    <string name="txtSalario">Salário</string>
    <string name="txtCadastrar">Cadastrar</string>
    <string name="txtBuscarPeloRe">Buscar pelo RE</string>
    <string name="txtExcluir">Excluir</string>
    <string name="txtAlterar">Alterar</string>
    <string name="txtListar">Listar</string>
    <string name="txtTesteTcp">Teste TCP</string>
    <string name="txtTesteUDP">Teste UDP</string>
    <string name="txtTesteHttp">Teste http</string>
</resources>